@@ -1,5 +1,14 @@
 === Modified version of GNU Emacs for Mac OS X ===
 
+Version <to be determined>
+=====================================
+
+NEW FEATURE
+
+o RefTeX is now activated in the site-start.el file. Thanks to Miguel
+  Ruiz <rbenit68@gmail.com> for the suggestion.
+
+
 Version 23.2-modified-4-i386 (8 June 2010)
 ==========================================
 
